# MicrosoftPurviewCustomConectors

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements.txt
deployment/fabric/: README.md
docs/: architecture.md  authentication.md  best-practices.md  fabric-integration.md  getting-started.md
examples/database-connector/: .env.template  README.md  database_connector_example.py
examples/file-connector/: .env.template  README.md  file_connector_example.py
notebooks/fabric/: atlas_transformer.ipynb  metadata_extractor.ipynb  purview_ingestion.ipynb
src/purview_connector_sdk/: __init__.py  client.py  exceptions.py  pyproject.toml
src/purview_connector_sdk/connectors/: __init__.py  api.py  base.py  database.py  filesystem.py
src/purview_connector_sdk/models/: __init__.py  entity.py  relationship.py
