[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purview-connector-sdk"
version = "1.0.0"
description = "Python SDK for building Microsoft Purview custom connectors"
readme = "README.md"
authors = [
    {name = "Microsoft Purview Custom Connectors Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "azure-identity>=1.15.0",
    "azure-mgmt-purview>=1.0.0",
    "azure-core>=1.29.0",
    "pyapacheatlas>=0.13.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
database = [
    "pyodbc>=5.0.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
]
files = [
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
